TEST_PROGRAMS/VALID/shivan_sahib/print_pyramid.min
# Print pyramid of height defined by x
var y : int;
read x;

while x do
	y = x;
	while y do
		print ".";
		y = y - 1;
	done
	x = x - 1;
done

