TEST_PROGRAMS/INVALID/grady_weber/missingDone.min
#Missing Done
var x : int;
x = 10;
while x do
    x = x - 1;    

